# minimal-ollama-gtk4-client

./: Cargo.toml  README.md
src/: api.rs  app.rs  config.rs  db.rs  main.rs  markdown_processor.rs  markdown_renderer.rs  state.rs  types.rs  ui.rs
src/ui/: chat.rs  controls.rs  handlers.rs  input.rs  mod.rs  settings_dialog.rs  sidebar.rs
