[package]
name = "ollama-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
# GTK4 and GLib
gtk4 = { version = "0.9", features = ["v4_12"] }

# HTTP client with JSON support
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Async runtime and utilities
tokio = { version = "1.0", features = ["rt-multi-thread", "time"] }
futures-util = "0.3"
async-channel = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"