[package]
name = "ollama-chat-gtk4"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
glib = "0.20"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
futures-util = "0.3"
async-channel = "2.3"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }